--- a/simulasi.html
+++ b/simulasi.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@200;400;500;700&display=swap" rel="stylesheet" />
 
     <!--Link CSS-->
-    <link rel="stylesheet" href="/Css/simulasi.css" />
+    <link rel="stylesheet" href="ATG-5.0-HGR/Css/simulasi.css" />
     <link rel="icon" href="/Img/logo.png" type="image/x-icon" />
     <title>ATG-5.0</title>
   </head>
