--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@200;400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/Css/register.css" />
     <link rel="icon" href="/Img/logo.png" type="image/x-icon" />
-    <title>ATG-5.0</title>
+    <title>ATG 5.0-Jagakarsa</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark w-100">
@@ -53,17 +53,17 @@
     </nav>
 
     <section id="registrasi">
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
           <div class="col-10 col-md-4 offset-1 offset-md-4">
             <img src="/Img/Img-regist/logo.png" alt="" srcset="" />
           </div>
           <div class="col-12 col-md-6 offset-md-3">
-            <h1>Cara Melakukan Registrasi <br />AUTO <span class="yellow">TRADE GOLD</span></h1>
+            <h1>Cara Melakukan Registrasi <br />AUTO TRADE <span class="yellow"> GOLD</span></h1>
           </div>
         </div>
         <div class="row persyaratan">
-          <div class="col-12 ms-md-5">
+          <div class="col-12">
             <h2>Persyaratan</h2>
             <ul>
               <li>Siapkan foto KTP dan Selfie dengan KTP</li>
@@ -75,59 +75,64 @@
         </div>
       </div>
     </section>
-
     <!-- Tutor -->
     <section id="tutor">
       <div class="container-fluid py-5">
         <div class="row">
-          <div class="col-lg-3 ms-lg-5 kiri">
+          <div class="col-md-10 offset-md-1 offset-lg-0 col-lg-3 ms-lg-4 kiri">
+            <a href="#pertama">
             <div class="pilihan">
-              <a href="#pertama">
                 <h3>Buka Akun di Broker Melalui Link :</h3>
-              </a>
-              <a href="https://pansaka.co.id/?r=10231193" class="link"> https://pantheratrade.live/register?r=IB96877881 </a>
+                <ion-icon name="chevron-forward-outline" class="icon"></ion-icon>
+              <a href="https://pantheratrade.live/register?r=IB96877881" class="link"> https://pantheratrade.live/register?r=IB96877881 </a>
             </div>
+          </a>
+            <a href="#kedua">
             <div class="pilihan">
-              <a href="#kedua">
                 <h3>Verifikasi Akun</h3>
-              </a>
+                <ion-icon name="chevron-forward-outline" class="icon"></ion-icon>
             </div>
+          </a>
+            <a href="#ketiga">
             <div class="pilihan">
-              <a href="#ketiga">
                 <h3>Buat Akun MT4 Gold</h3>
-              </a>
+                <ion-icon name="chevron-forward-outline" class="icon"></ion-icon>
             </div>
+          </a>
+            <a href="#keempat">
             <div class="pilihan">
-              <a href="#keempat">
                 <h3>Deposit</h3>
-              </a>
+                <ion-icon name="chevron-forward-outline" class="icon"></ion-icon>
             </div>
+          </a>
+            <a href="#kelima">
             <div class="pilihan">
-              <a href="#kelima">
                 <h3>Beli Future Packages di</h3>
-                <h3></h3>
-              </a>
+                <ion-icon name="chevron-forward-outline" class="icon"></ion-icon>
               <a href="https://pansaka.co.id/?r=10231193" class="link"> https://pansaka.co.id/?r=10231193</a>
+            
             </div>
+          </a>
+          <a href="#keenam">
             <div class="pilihan">
-              <a href="#keenam">
                 <h3>Aktivasi bot ATG 5.0 di</h3>
-              </a>
-              <a
+                <ion-icon name="chevron-forward-outline" class="icon"></ion-icon>
+               <a
                 href="https://atg-system.com
               "
                 class="link"
                 >https://atg-system.com
               </a>
             </div>
+          </a>
           </div>
 
-          <div class="col-lg-8 mx-md-auto p-0 text-center kanan">
+          <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-0 mx-lg-auto p-0 text-center kanan">
             <div id="pertama">
               <h1>BUKA AKUN DI BROKER PANTHERATRADE.LIVE</h1>
               <p>
                 Kunjungi Link Berikut :
-                <a href="" class="link">https://pantheratrade.live/register?r=IB96877881</a><br />
+                <a href="https://pantheratrade.live/register?r=IB96877881" class="link">https://pantheratrade.live/register?r=IB96877881</a><br />
                 (Harus menggunakan link diatas agar terhubung dengan jaringan di perusahaan)
               </p>
               <p>Pastikan IB Refference anda : <span class="red">IB96877881</span></p>
@@ -152,8 +157,8 @@
               <h1>LANGKAH – LANGKAH VERIFIKASI AKUN</h1>
               <p>
                 Dalam Tahapan ini anda di minta untuk upload data diri (FOTO KTP DAN FOTO SELFIE DENGAN KTP)<br />
-                CARA UPLOUD Kunjungi website : <a href="https://imglink.io">https://imglink.io</a>
-              </p>
+                CARA UPLOUD Kunjungi website : <a href="https://imglink.io" class="link">https://imglink.io</a>
+              </p> 
               <img src="/Img/Img-regist/langkah1.png" alt="" />
               <p>Pilih data diri anda anda, klik start upload. Selanjutnya setelah anda upload data diri, akan menghasilkan link hasil upload Copy link tersebut</p>
               <img src="/Img/Img-regist/langkah2.png" alt="" />
@@ -244,7 +249,7 @@
               <img src="/Img/Img-regist/pansaka3.png" alt="" />
               <p>
                 Ketika anda sudah berhasil melakukan registrasi, <br />
-                maka secara automatis anda akan mendapatkan email yang berisi User ID dan Password yang bisa digunakan untuk Log In ke website <a href="Pansaka.co.id" class="link">Pansaka.co.id</a>
+                maka secara automatis anda akan mendapatkan email yang berisi User ID dan Password yang bisa digunakan untuk Log In ke website <a href="https://pansaka.co.id" class="link">Pansaka.co.id</a>
               </p>
 
               <img src="/Img/Img-regist/pansaka4.png" alt="" />
@@ -301,8 +306,8 @@
     </section>
 
     <!-- FOOTER -->
-    <footer id="footer">
-      <div class="container py-5">
+    <footer id="footer"> 
+      <div class="container pt-5">
         <div class="row">
           <div class="col-md-6">
             <h1>Pembaritahuan Resiko</h1>
@@ -311,30 +316,29 @@
               mintalah nasihat independen jika diperlukan.
             </p>
           </div>
-          <div class="col-md-4 offset-md-2">
+          <div class="col-md-5 offset-md-1 col-lg-4 offset-lg-2">
             <h1>Hubungi Kami</h1>
-            <div class="contact d-flex">
-              <div class="logo">
+            <div class="contact d-flex align-items-center">
                 <ion-icon name="logo-whatsapp"></ion-icon>
-                <ion-icon name="mail-outline"></ion-icon>
-                <ion-icon name="logo-instagram"></ion-icon>
-              </div>
-              <div class="number">
                 <a href="https://bit.ly/ATGHGR">0813-8786-1932</a>
-                <a href="mailto:atg5.0jagakarsa@gmail.com">atg5.0jagakarsa@gmail.com</a>
-                <a href="https://www.instagram.com/atg5.0_robotforex/">@atg5.0_robotforex</a>
+              </div>
+            <div class="contact d-flex">
+              <ion-icon name="mail-outline"></ion-icon>
+              <a href="mailto:atg5.0jagakarsa@gmail.com">atg5.0jagakarsa@gmail.com</a>
+              </div>
+            <div class="contact d-flex">
+              <ion-icon name="logo-instagram"></ion-icon>
+              <a href="https://www.instagram.com/atg5.0_robotforex/">@atg5.0_robotforex</a>
               </div>
             </div>
-          </div>
-        </div>
         <div class="row pt-5">
           <div class="col-12 text-center">
-            <p>Website Broker Forex Pantheratrade bisa dikunj ungi di url berikut pantheratrade.live <br />Copyright © 2021 All rights reserved</p>
+            <p>Website Broker Forex PantheraTrade bisa dikunjungi di url berikut <a href="https://pantherarade.live/" class="yellow">pantheratrade.live</a> <br />Copyright © 2021 All rights reserved</p>
           </div>
         </div>
       </div>
     </footer>
-    <a href="#registrasi" class="go-top"> <ion-icon name="arrow-up-circle-outline"></ion-icon></a>
+    <a href="#tutor" class="go-top"> <ion-icon name="arrow-up-circle-outline"></ion-icon></a>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
