--- a/simulasi.html
+++ b/simulasi.html
@@ -14,12 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@200;400;500;700&display=swap" rel="stylesheet" />
 
     <!--Link CSS-->
-    <link rel="stylesheet" href="ATG-5.0-HGR/Css/simulasi.css" />
+    <link rel="stylesheet" href="/Css/simulasi.css" />
     <link rel="icon" href="/Img/logo.png" type="image/x-icon" />
-    <title>ATG-5.0</title>
+    <title>ATG 5.0-Jagakarsa</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark position-fixed w-100">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top w-100">
       <div class="container">
         <div class="navbar-brand d-flex" href="#">
           <img src="/Img/logo.png" alt="" width="60" class="me-2" />
@@ -55,16 +55,16 @@
     </nav>
 
     <section>
-      <div class="container text-center pt-5">
+      <div class="container text-center">
         <div class="row">
-          <div class="col-12 pt-5">
+          <div class="col-12">
             <h1>The Power Of Auto Compound</h1>
           </div>
           <div class="col-12">
             <h2>Bot Autotrade Gold di rancang untuk memaksimalkan profit para nasabah dengan sistem Auto Compound, Bot akan menambah lot open posisi sebesar 0.01 Lot di saat penambahan equity $100 di Account.</h2>
           </div>
           <div class="col-12">
-            <h1>Fix Kurs Yang Digunakan <span class="yellow">Auto Trade Gold 5.0</span></h1>
+            <h1 class="fix">Fix Kurs Yang Digunakan <span class="yellow">Auto Trade Gold 5.0</span></h1>
           </div>
           <div class="col-12">
             <h3>
@@ -74,38 +74,38 @@
           </div>
         </div>
         <div class="row pt-3 keterangan">
-          <div class="col-md-7">
+          <div class="col-lg-7">
             <img src="/Img/simulasi1.png" alt="" />
           </div>
-          <div class="col-md-5">
-            <h4>Lihat pada gambar di atas pilihan 1</h4>
+          <div class="text-lg-left col-lg-5 py-1 py-md-4">
+            <h4>Lihat pada contoh gambar pilihan 1</h4>
             <p>
-              Dari Simulasi di atas disini kita menggunakan Total Modal yaitu <span class="red">Rp. 100.000.000</span>, dengan pembelian Robot Auto <span class="yellow">Trade Gold 5.0 </span>menggunakan robot
-              <span class="red">Level 3</span> yaitu sebesar
-              <span class="red"> 8.400.000 (dengan adanya pembelian robot kita mendapatkan berupa future package dimana setiap pembelian kita harus membayar kurir untuk mengirim future package tersebut)</span>
+              Dari Simulasi di atas disini kita menggunakan Total Modal yaitu Rp. 100.000.000, dengan pembelian Robot Auto <span class="yellow">Trade Gold 5.0 </span>menggunakan robot <span class="fw-bold">Level 3</span> yaitu sebesar
+              8.400.000
+              <span class="red"> (dengan adanya pembelian robot kita mendapatkan berupa future package dimana setiap pembelian kita harus membayar kurir untuk mengirim future package tersebut)</span>
             </p>
             <p class="bold">Berarti sisa uang yang kita miliki dari Rp. 100.000.000 setelah membeli robot dengan harga Rp. 8.400.000 adalah Rp. 91.600.000</p>
           </div>
         </div>
-        <div class="row py-md-5 keterangan">
-          <div class="col-md-7">
+        <div class="row py-lg-5 keterangan">
+          <div class="col-lg-7">
             <img src="/Img/simulasi2.png" alt="" />
           </div>
-          <div class="col-md-5">
-            <h4>Lihat pada gambar di atas pilihan 2</h4>
+          <div class="text-left col-lg-5 py-1 py-md-4">
+            <h4>Lihat pada contoh gambar pilihan 2</h4>
             <p>
-              Dengan Modal Rp. 91.600.000 dan karna kurs Deposit adalah 15.000/1$ Jadi Modal yang kita dapat dalam bentuk Dolar dari Rp. 91.600.000 adalah <span class="red">$6.106.66</span> Dalam simulasi ini kita menggunakan Average profit
-              per hari 0.6% dengan mulai bergabung bersama Auto <span class="yellow">Trade Gold 5.0</span> sejak 1 Maret 2021.
+              Dengan Modal Rp. 91.600.000 dan karna kurs Deposit adalah 15.000/1$ Jadi Modal yang kita dapat dalam bentuk Dolar dari Rp. 91.600.000 adalah $6.106.66 Dalam simulasi ini kita menggunakan Average profit per hari 0.6% dengan
+              mulai bergabung bersama Auto <span class="yellow">Trade Gold 5.0</span> sejak 1 Maret 2021.
             </p>
             <p class="bold">Dan kita menghitung jangka investasi selama 6 bulan tanpa adanya withdrawal / penarikan uang. Disini kita mendapatkan Pertumbuhan Investasi sebesar 103.12%</p>
           </div>
         </div>
         <div class="row text-center">
-          <div class="col-12 col-md-10 offset-lg-1">
+          <div class="col-12 col-lg-10 offset-lg-1">
             <h4>Berarti dengan uang Rp. 100.000.000 tanpa melakukan withdrawal / penarikan uang kita menjadi Rp. 203.118.450</h4>
             <h5>
-              (Catatan : dengan membeli robot Auto Trade Gold 5.0 berarti kita sudah memilikinya seumur hidup, dan simulasi di atas hanya perkiraan selama 6 bulan. jadi menggunakan robot Auto <span class="yellow">Trade Gold 5.0</span> ini
-              bisa seumur hidup, tanpa mengikuti simulasi di atas yang hanya 6 bulan, perhitungan 6 bulan itu berarti kita sudah BEP)
+              (Catatan : dengan membeli robot Auto <span class="yellow">Trade Gold 5.0</span>berarti kita sudah memilikinya seumur hidup, dan simulasi di atas hanya perkiraan selama 6 bulan. jadi menggunakan robot Auto
+              <span class="yellow">Trade Gold 5.0</span> ini bisa seumur hidup, tanpa mengikuti simulasi di atas yang hanya 6 bulan, perhitungan 6 bulan itu berarti kita sudah BEP)
             </h5>
             <div class="col-12">
               <h6>High Risk <span class="green">High Return</span></h6>
@@ -121,7 +121,7 @@
         </div>
       </div>
     </section>
-    <footer id="footer">
+    <footer id="footer"> 
       <div class="container pt-5">
         <div class="row">
           <div class="col-md-6">
@@ -131,25 +131,24 @@
               mintalah nasihat independen jika diperlukan.
             </p>
           </div>
-          <div class="col-md-4 offset-md-0 offset-lg-2">
+          <div class="col-md-5 offset-md-1 col-lg-4 offset-lg-2">
             <h1>Hubungi Kami</h1>
-            <div class="contact d-flex">
-              <div class="logo">
+            <div class="contact d-flex align-items-center">
                 <ion-icon name="logo-whatsapp"></ion-icon>
-                <ion-icon name="mail-outline"></ion-icon>
-                <ion-icon name="logo-instagram"></ion-icon>
-              </div>
-              <div class="number">
                 <a href="https://bit.ly/ATGHGR">0813-8786-1932</a>
-                <a href="mailto:atg5.0jagakarsa@gmail.com">atg5.0jagakarsa@gmail.com</a>
-                <a href="https://www.instagram.com/atg5.0_robotforex/">@atg5.0_robotforex</a>
+              </div>
+            <div class="contact d-flex">
+              <ion-icon name="mail-outline"></ion-icon>
+              <a href="mailto:atg5.0jagakarsa@gmail.com">atg5.0jagakarsa@gmail.com</a>
+              </div>
+            <div class="contact d-flex">
+              <ion-icon name="logo-instagram"></ion-icon>
+              <a href="https://www.instagram.com/atg5.0_robotforex/">@atg5.0_robotforex</a>
               </div>
             </div>
-          </div>
-        </div>
         <div class="row pt-5">
           <div class="col-12 text-center">
-            <p>Website Broker Forex Pantheratrade bisa dikunjungi di url berikut pantheratrade.live <br />Copyright © 2021 All rights reserved</p>
+            <p>Website Broker Forex PantheraTrade bisa dikunjungi di url berikut <a href="https://pantherarade.live/" class="yellow">pantheratrade.live</a> <br />Copyright © 2021 All rights reserved</p>
           </div>
         </div>
       </div>
