--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@200;400;500;700&display=swap" rel="stylesheet" />
     
     <!--CSS-->  
-    <link rel="stylesheet" href="/Css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/Css/style.css">
     <link rel="icon" href="/Img/logo.png" type="image/x-icon" />
     <title>ATG 5.0-Jagakarsa</title>
     
